Fixes to QuickWhois Remove FIXME: fields missing when parsing your own profile Prevent long fields from stretching quick post (this was a CSS error; why was white-space: pre; added in the first place?) Signed-off-by: Brian Marshall <b3marshall@gmail.com>

--- a/chrome/content/css/gamefox-classic-default.css
+++ b/chrome/content/css/gamefox-classic-default.css
@@ -74,7 +74,7 @@
         background-color: #ffffff !important;
         font-family: monospace;
         font-size: 13px;
-        white-space: pre;
+        max-width: 80%;
         -moz-border-radius: 10px;
         -moz-opacity: 0.90;
     }
